# safeway-kids

./: .gitattributes  .gitignore  .mcp.json  CLAUDE.md  README.md  settings.json
backend/: .dockerignore  Dockerfile  alembic.ini  check_tables.py  docker-compose.yml  pyproject.toml  reset_db.py
backend/app/: __main__.py  config.py  database.py  dependencies.py  logging_config.py  main.py  redis.py  seed.py  seed_eunpyeong.py
backend/app/common/: exceptions.py  pagination.py  security.py
backend/app/common/map_provider/: base.py  kakao.py
backend/app/middleware/: auth.py  consent.py  rbac.py  request_logging.py
backend/app/modules/academy_management/: models.py  router.py  schemas.py  service.py
backend/app/modules/admin/: models.py  router.py  schemas.py  service.py
backend/app/modules/auth/: models.py  qualification_checker.py  router.py  schemas.py  service.py
backend/app/modules/billing/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/compliance/: models.py  router.py  (+2 more)
backend/migrations/: env.py
backend/migrations/versions/: 22410ab5734a_add_pg_payment_fields.py  4a989d8a9392_m7_billing_m9_escort_tables.py  669d22698f33_merge_heads_before_audit_logs.py  8642bc438b32_add_compliance_documents_table.py  8723a985bcbb_add_contact_inquiries_table.py  959a28869c77_initial_schema.py  b8269aadedb8_add_audit_logs_table.py  fe02afa3a8b8_add_edge_events_table.py  m2_schema_updates.py
backend/scripts/: gps_loop.sh  gps_replay.py  sample_routes.json  seed.py
backend/tests/: conftest.py
backend/tests/integration/: test_billing_pg.py  test_bulk_upload.py  test_compliance.py  test_e2e_flow.py  test_e2e_hardening.py  test_edge_gateway.py  test_health.py  test_m2_apis.py  test_m4_websocket.py  test_m6_pipeline.py  test_m7_billing.py  test_m9_escort.py  test_rbac.py  test_student_crud.py
backend/tests/unit/: test_auth.py  test_security.py  test_vrp_solver.py
(+470 files in other folders)
