[project]
name = "safeway-kids-backend"
version = "0.1.0"
description = "SAFEWAY KIDS - AI-Powered Children's School Shuttle Bus Sharing Platform"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy[asyncio]>=2.0.28",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Validation & Settings
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    # Redis
    "redis[hiredis]>=5.0.0",
    # Firebase
    "firebase-admin>=6.4.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.27.0",
    # Encryption
    "cryptography>=42.0.0",
    "psycopg2-binary>=2.9.0",
    # Route optimization
    "ortools>=9.9.0",
    # Scheduling
    "apscheduler>=3.10.0",
    # i18n
    "babel>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "factory-boy>=3.3.0",
    "testcontainers[postgres,redis]>=4.0.0",
    "aiosqlite>=0.20.0",
    "fakeredis>=2.21.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["B008"]  # Depends() in FastAPI default args is standard pattern

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
